<resources>
    <string name="app_name">STAFF SUPPORT SYSTEM</string>
    <string name="Hod_login">HOD LOGIN</string>
    <string name="Staff_login">STAFF LOGIN</string>
    <string name="title_activity_home1">HomeActivity1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">DASHBOARD</string>
    <string name="menu_gallery">ATTENDANCE</string>
    <string name="menu_slideshow">LESSON PLAN</string>
    <string name="menu_progress_report">PROGRESS REPORT</string>
    <string name="menu_submission_progress">SUBMISSION REPORT</string>
    <string name="signup_here">SignUp Here</string>
    <string name="full_name">Full name</string>
    <string name="username">username</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="verify_phone">Verify phone</string>
    <string name="signup">SIGNUP</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="sttitle">PROGRESS REPORT</string>
    <string name="studentname"> Student Name :  </string>
    <string name="rollno"> Roll No. :     </string>
    <string name="ut1"> Unit Test 1 :      </string>
    <string name="mid"> Mid Semester :    </string>
    <string name="ut2"> Unit Test 2 :      </string>
    <string name="total"> Total :         </string>
    <string name="cgpa"> CGPA :           </string>
    <string name="percent"> Percentage:   </string>
    <string name="ok"> Calculate  </string>
    <string name="clear"> Clear </string>
    <string name="video_conference">VIDEO CONFERENCE</string>
</resources>