<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.staffsupportsystem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.staffsupportsystem.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.staffsupportsystem.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_Progress_report"
        android:name="com.example.staffsupportsystem.ui.progressReport.ProgressReportFragment"
        android:label="PROGRESS REPORT"
        tools:layout="@layout/fragment_progress_report" />

    <fragment
        android:id="@+id/nav_submission_report"
        android:name="com.example.staffsupportsystem.ui.submissionReport.SubmissionReportFragment"
        android:label="SUBMISSION REPORT"
        tools:layout="@layout/fragment_submission_report" />
</navigation>